# ThreadedObject

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  clion.docker  devcontainer.json
ThreadLib/: CMakeLists.txt
ThreadLib/include/: macros.h  thread_holder.h  thread_object.h
ThreadLib/source/: thread_holder.cpp  thread_object.cpp
demos/: CMakeLists.txt
demos/multi_holder/: CMakeLists.txt
demos/multi_holder/include/: consumer.h
demos/single_holder/: CMakeLists.txt
demos/single_holder/include/: provider.h
demos/single_holder/source/: consumer.cpp  main.cpp  provider.cpp
include/: thread_holder.h  thread_object.h
source/: thread_holder.cpp  thread_object.cpp
tests/: CMakeLists.txt  ThreadedObject.cpp  ThreadedObject.h  thread_holder_test.cpp  thread_object_test.cpp
tests/test_util/: util.cpp  util.h
